--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,7 @@
+book_filename: psych-methods
 delete_merged_file: true
+output_dir: docs
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: 'Chapter '
+new_session: true
