initial align to p70 syllabus

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,15 +4,15 @@ rmd_files:
 - index.Rmd
 - 01-science-of-psych.Rmd
 - 02-getting-started.Rmd
-- 03-theory.Rmd
-- 04-ethics.Rmd
-- 05-experiments.Rmd
-- 06-measurement.Rmd
-- 07-sampling.Rmd
-- 08-complex-designs.Rmd
-- 09-nonexperiments.Rmd
-- 10-single-N.Rmd
-- 11-ideas.Rmd
+- 03-experiments.Rmd
+- 04-measurement.Rmd
+- 05-sampling.Rmd
+- 06-complex-experiments.Rmd
+- 07-quasi-experiments.Rmd
+- 08-nonexperiments.Rmd
+- 09-ethics.Rmd
+- 10-ideas.Rmd
+- 11-theory.Rmd
 - 12-presenting.Rmd
 - 13-descriptives.Rmd
 - 14-inferentials.Rmd
